# codex

./: .gitignore  DEBUG_INSTRUCTIONS.md  PARALLEL_READ_IMPLEMENTATION.md  manual_test_instructions.txt  package-lock.json  parallel_read_demo.md  pnpm-lock.yaml  test_debug.sh  test_grok_api.py  test_mcp_tools.py  test_tui_grok.py
codex-rs/: .gitignore  CHANGELOG.md  COMPILATION_WARNINGS_FIXED.md  Cargo.toml  README.md  config.md  test_ux_consistency.sh
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: chatgpt_client.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: lib.rs  main.rs  native_cli.rs
codex-rs/codex-serena/: Cargo.toml
codex-rs/codex-serena/src/: lib.rs
codex-rs/common/: Cargo.toml
codex-rs/common/src/: io_utils.rs  json_utils.rs  lib.rs
codex-rs/configs/feature_flags/: example_feature.yaml
codex-rs/core/: Cargo.toml  prompt.md
codex-rs/core/examples/: test_grok_direct.rs  test_rate_limit.rs
codex-rs/core/src/: audit.rs  bash.rs  chat_completions.rs  client.rs  client1.rs  codex.rs  codex_wrapper.rs  config.rs  config_types.rs  debug_log.rs  error.rs  exec.rs  external_decider.rs  interfaces.rs  is_safe_command.rs  lib.rs  model_provider_info.rs  openai_model_info.rs  openai_tools.rs  protocol.rs  retry.rs  safety.rs  serena_inprocess.rs  serena_wiring.rs  session_manager.rs  shell.rs  types.rs
codex-rs/core/src/codex/: compact.rs
codex-rs/core/src/state/: session.rs
codex-rs/core/tests/: cli_stream.rs  client.rs  external_decider_smoke.rs  stream_no_completed.rs
codex-rs/core/tests/suite/: compact.rs
codex-rs/docs/: RAG.md  codex_serena_audit.md  config_reference_and_faq.md  health_checks.md  improvement_roadmap_cn.md  integration_overview.md  migration_guide_mcp_to_serena.md  oncall_rotation.md  perf_tuning_and_troubleshooting.md  serena_local_model_plan.md  serena_native_integration.md
codex-rs/docs/adr/: ADR-graphiti-contextstore-adapter.md  ADR-serena-integration-topology.md
codex-rs/docs/development/: audit_decision_log.md  external_decider.md
codex-rs/docs/release/: step21_gray_release.md  step23_upstream_sync.md
codex-rs/examples/agent-minimal/: README.md  run.sh  serena-agent.toml
codex-rs/examples/lsp-minimal/: README.md  run.sh  serena-lsp.json
codex-rs/examples/tools-minimal/: README.md  run.sh  serena.toml
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  lib.rs  main.rs  markdown.rs  stream_markdown.rs
codex-rs/file-search/: Cargo.toml
codex-rs/file-search/src/: cli.rs  main.rs
codex-rs/file-search/tests/: file_search_tests.rs
codex-rs/graphiti-rust/: .gitignore  ARCHITECTURE_CORRECTED.md  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile.dev  Dockerfile.embeddings  FREE_USAGE_GUIDE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLICIT_USAGE.md  MCP_STDIO_SETUP.md  MIGRATION.md  PROJECT_ISOLATION.md  QUICK_START.md  README-Qwen3.md  README.md  README_LLM_INTEGRATION.md  TASK_WORKFLOW.md  UNIFIED_MODE.md  USAGE.md  claude_desktop_config.json  claude_desktop_config_updated.json  config.embedding-only.toml  config.free.toml  config.learning.toml  config.local-only.toml  config.qwen-embedding.toml  config.qwen.toml  config.qwen3-embedding.toml  config.test.toml  config.toml  config.unified.toml  docker-compose.dev.yml  docker-compose.free.yml  docker-compose.yml  embedding_server.py  learning-concept-demo.rs  mcp-config-augmentcode.json  mcp-config-candle.json  (+7 more)
codex-rs/graphiti-rust/crates/graphiti-mcp/: Cargo.toml  config.toml
codex-rs/graphiti-rust/docs/: LIBP2P_COMPATIBILITY.md  NETWORK_CONFIGURATION.md  QUIC_SUPPORT_ANALYSIS.md
codex-rs/graphiti-rust/scripts/: health-check.sh  setup-docker.sh
codex-rs/graphiti-rust/tools/: graphiti-status.sh  graphiti_explorer.py  knowledge-monitor.js
codex-rs/graphiti-rust/workflows/: README.md  bug-fix.md  code-review.md  new-feature.md
codex-rs/integrations/codex-graphiti/: Cargo.toml
codex-rs/integrations/codex-graphiti/src/: lib.rs
codex-rs/integrations/codex-graphiti/tests/: graphiti_contextstore_tests.rs
codex-rs/integrations/codex-serena/: Cargo.toml
codex-rs/integrations/codex-serena/src/: lib.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_tool_config.rs  lib.rs  main.rs  message_processor.rs  parallel_read_tool.rs
codex-rs/mcp-server/tests/: basic_tests.rs
codex-rs/mcp-types/src/: lib.rs
codex-rs/ops/alerts/: prometheus_rules_example.yaml
codex-rs/ops/runbooks/: rollback_playbook.md
codex-rs/rag-system/: Cargo.toml  README.md  claude-integration.md  start-rag-integration.sh
codex-rs/rag-system/src/: config.rs  lib.minimal.rs  lib.rs  types.rs
codex-rs/rag-system/src/embedding/: code_tokenizer.rs  mod.rs  semantic_analyzer.rs
codex-rs/rag-system/src/parser/: java_parser.rs  kotlin_parser.rs  mod.rs  rust_parser.rs  simple_parser.rs
codex-rs/rag-system/src/performance/: mod.rs
codex-rs/rag-system/src/query/: mod.rs  query_engine.rs
codex-rs/rag-system/src/vector_store/: collection_manager.rs  index_optimizer.rs  mod.rs  query_builder.rs
codex-rs/serena-rust/: Cargo.toml  UPSTREAM_PIN
codex-rs/serena-rust/serena-agent/: Cargo.toml
codex-rs/serena-rust/serena-agent/src/: agent.rs  lib.rs  (+2 more)
codex-rs/serena-rust/serena-bench/: Cargo.toml
codex-rs/serena-rust/serena-cli/: Cargo.toml
codex-rs/serena-rust/serena-config/: Cargo.toml
codex-rs/serena-rust/serena-core/: Cargo.toml
codex-rs/serena-rust/serena-db/: Cargo.toml
codex-rs/serena-rust/serena-lsp/: Cargo.toml
codex-rs/serena-rust/serena-mcp/: Cargo.toml
codex-rs/serena-rust/serena-tools/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  cli.rs  continuous_mode.rs  continuous_runtime.rs  conversation_history_widget.rs  history_cell.rs  keyboard_help_widget.rs  lib.rs  loading_indicator.rs  main.rs  markdown.rs  status_bar.rs  status_indicator_widget.rs  text_block.rs  text_formatting.rs  theme.rs  tui.rs  user_approval_widget.rs
(+106 files in other folders)
