[workspace]
members = [
    "ansi-escape",
    "apply-patch",
    "arg0",
    "cli",
    "common",
    "core",
    "exec",
    "execpolicy",
    "file-search",
    "linux-sandbox",
    "login",
    "ollama",
    "tui",
    "integrations/codex-serena",
    "integrations/codex-graphiti",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
lto = "fat"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"

# See https://github.com/openai/codex/issues/1411 for details.
codegen-units = 1

[patch.crates-io]
# ratatui = { path = "../../ratatui" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }


[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
parking_lot = "0.12"
schemars = "0.8"
serde_yaml = "0.9"
async-trait = "0.1"
once_cell = "1.19"
regex = "1"
aho-corasick = "1"
regex-syntax = "0.8"
bytes = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
walkdir = "2.5.0"
ignore = "0.4.23"
globset = "0.4"
serde_repr = "0.1"
time = "0.3"

tempfile = "3"
