[package]
name = "rag-system"
version = "0.1.0"
edition = "2021"
authors = ["UniConnectNative Team"]
description = "RAG system for UniConnectNative codebase"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qdrant-client = "1.9"
regex = "1.10"
rayon = "1.8"
walkdir = "2.4"
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "rag-indexer"
path = "src/bin/indexer.rs"

[[bin]]
name = "rag-server"
path = "src/bin/server.rs"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp-server.rs"

[lib]
name = "rag_system"
path = "src/lib.rs"