[workspace]
members = [
    "serena-agent",
    "serena-cli",
    "serena-config",
    "serena-core",
    "serena-db",
    "serena-lsp",
    "serena-mcp",
    "serena-tools",
    "serena-bench",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
parking_lot = "0.12"
schemars = "0.8"
regex = "1"
aho-corasick = "1"
regex-syntax = "0.8"
bytes = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
walkdir = "2.5.0"
ignore = "0.4.23"
globset = "0.4"
serde_repr = "0.1"
time = "0.3"
async-trait = "0.1"
once_cell = "1.19"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
rand = "0.8"
