[package]
name = "serena-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
serena-core = { path = "../serena-core" }

[dev-dependencies]
serde_json = { workspace = true }