[package]
name = "serena-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.24", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.17", features = ["http-proto", "trace", "metrics"] }
opentelemetry_sdk = { version = "0.24" }
uuid = { workspace = true }
parking_lot = { workspace = true }
schemars = { workspace = true }
serde_yaml = { workspace = true }
async-trait = "0.1"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"
rand = { version = "0.8" }
globset = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }