[package]
name = "serena-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
serena-core = { path = "../serena-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10.1"
tokio = { workspace = true }
serde_json = { workspace = true }